--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo192.jpg" />
+    <meta name="google-site-verification" content="G5BBhEKbGUQ6Ac7KrB-yb0a67o9yTdKZ0yirnJFwOp8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
